feat(ms-races): Adds track error handling [#7]