@@ -1,8 +1,8 @@
-package com.cars.mscars.Service.Exceptions;
+package com.races.msraces.Domain.Track.Service.Exceptions;
 
-import com.cars.mscars.Service.Exceptions.Error.ErrorResponse;
-import com.cars.mscars.Service.Exceptions.Error.ValidationError;
-import com.cars.mscars.Service.Exceptions.Error.ValidationErrorResponse;
+import com.races.msraces.Domain.Track.Service.Exceptions.Error.ErrorResponse;
+import com.races.msraces.Domain.Track.Service.Exceptions.Error.ValidationError;
+import com.races.msraces.Domain.Track.Service.Exceptions.Error.ValidationErrorResponse;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
@@ -11,13 +11,12 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class ControllerExceptionHandler {
 
     @ExceptionHandler(Exception.class)
-    public ResponseEntity<ErrorResponse> carNotFoundException(Exception ex) {
+    public ResponseEntity<ErrorResponse> trackException(Exception ex) {
         ErrorResponse message = new ErrorResponse(
                 HttpStatus.BAD_REQUEST.value(),
                 LocalDateTime.now(),
@@ -31,7 +30,7 @@ public class ControllerExceptionHandler {
                 .getFieldErrors()
                 .stream()
                 .map(fieldError -> new ValidationError(fieldError.getDefaultMessage(), fieldError.getField()))
-                .collect(Collectors.toList());
+                .toList();
 
         ValidationErrorResponse message = new ValidationErrorResponse(
                 HttpStatus.BAD_REQUEST.value(),
@@ -42,21 +41,12 @@ public class ControllerExceptionHandler {
         return new ResponseEntity<>(message, HttpStatus.BAD_REQUEST);
     }
 
-    @ExceptionHandler(CarNotFoundException.class)
-    public ResponseEntity<ErrorResponse> carNotFoundException(CarNotFoundException ex) {
+    @ExceptionHandler(TrackNotFoundException.class)
+    public ResponseEntity<ErrorResponse> trackNotFoundException(TrackNotFoundException ex) {
         ErrorResponse message = new ErrorResponse(
                 HttpStatus.NOT_FOUND.value(),
                 LocalDateTime.now(),
                 ex.getMessage());
         return new ResponseEntity<>(message, HttpStatus.NOT_FOUND);
-    }
-
-    @ExceptionHandler(AlreadyRegisteredException.class)
-    public ResponseEntity<ErrorResponse> AlreadyRegisteredException(AlreadyRegisteredException ex) {
-        ErrorResponse message = new ErrorResponse(
-                HttpStatus.BAD_REQUEST.value(),
-                LocalDateTime.now(),
-                ex.getMessage());
-        return new ResponseEntity<>(message, HttpStatus.BAD_REQUEST);
     }
 }
